<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.salis.materialdesign.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open"
        android:orderInCategory="200"
        android:title="@string/drawer_open"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_activity"
        android:orderInCategory="300"
        android:title="@string/action_activity"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_activity_library"
                android:title="@string/library"
                app:showAsAction="never"
                android:orderInCategory="100"/>
        </menu>



    </item>
</menu>
